---
source: crates/air/tests/integration/format.rs
expression: "Command::new(binary_path()).current_dir(path_root()).arg(\"format\").arg(path1).arg(path2).arg(\"--check\").run()"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Would reformat: fixtures/needs-formatting-1.R
Would reformat: fixtures/needs-formatting-2.R

----- args -----
format fixtures/needs-formatting-1.R fixtures/needs-formatting-2.R --check
